...
              android:layout_height="match_parent"
                android:gravity="top"
                tools:context=".fragments.MainFragment"
    >

    <RelativeLayout
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext_thicker"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <org.droidparts.widget.ClearableEditText
            android:id="@+id/searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Search for your favorite dishes..."
            android:maxLength="30"
            android:maxLines="1"
            android:scrollHorizontally="true"
...
